test/instance-checks-6.ktn
def example {a}(a -> Int) { }
